testData/fqcn/annotator/EndTokenFQCNUnresolved.Camel
${bodyAs(java.lang.<error descr="Unresolved Reference">MissingReference</error>)}